--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="/fbfavicon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/fbfavicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook - login or sign up</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body class="bg-gray-100">
-    <div class="container mt-40 flex mx-auto items-center justify-center">
-        <div class="left w-2/5">
-            <img src="fblogo.svg" alt="fblogo" class="w-60">
-            <p class="text-2xl mx-6 mr-4">Facebook helps you connect and share with the people in your life.</p>
-        </div>
+  <body class="bg-gray-100 px-10 py-10">
+    <div
+      class="container mt-[125px] flex gap-10 flex-col md:flex-row mx-auto items-center justify-center"
+    >
+      <div class="left md:w-2/5">
+        <img src="fblogo.svg" alt="fblogo" class="w-60" />
+        <p class="text-2xl mx-6 mr-4">
+          Facebook helps you connect and share with the people in your life.
+        </p>
+      </div>
 
-        <div class="right flex flex-col bg-white p-5 rounded-lg h-80 ml-16 w-1/3 shadow-xl">
-            <input class="px-3 h-11 my-1.5 rounded-md border border-1 border-gray-200" type="text"
-                placeholder="Email address or phone number">
-            <input class="px-3 h-11 my-1.5 rounded-md border border-1 border-gray-200" type="password"
-                placeholder="Password">
-            <button class="bg-blue-500 hover:bg-blue-600 rounded-md h-10 text-white font-bold my-2">Login</button>
-            <span class="text-center text-blue-500 text-sm m-auto mb-4 hover:underline cursor-pointer"><a
-                    href="">Forgotten
-                    password?</a></span>
-            <hr>
-            <button
-                class="bg-green-500 hover:bg-green-600 rounded-md h-10 w-fit m-auto px-3 text-white font-bold my-5">Create
-                New
-                Account</button>
-            <span class="absolute bottom-20 ml-12 text-sm"> <span class="font-bold hover:underline"> <a href="">Create a
-                        Page </a>
-                </span> for a celebrity, brand or business. </span>
-        </div>
+      <div
+        class="right w-full flex flex-col bg-white p-5 rounded-lg h-80 md:ml-16 md:w-1/3 shadow-xl"
+      >
+        <input
+          class="px-3 h-11 my-1.5 rounded-md border border-1 border-gray-200"
+          type="text"
+          placeholder="Email address or phone number"
+        />
+        <input
+          class="px-3 h-11 my-1.5 rounded-md border border-1 border-gray-200"
+          type="password"
+          placeholder="Password"
+        />
+        <button
+          class="bg-blue-500 hover:bg-blue-600 rounded-md h-10 text-white font-bold my-2"
+        >
+          Login
+        </button>
+        <span
+          class="text-center text-blue-500 text-sm m-auto mb-4 hover:underline cursor-pointer"
+          ><a href="">Forgotten password?</a></span
+        >
+        <hr />
+        <button
+          class="bg-green-500 hover:bg-green-600 rounded-md h-10 w-fit m-auto px-3 text-white font-bold my-5"
+        >
+          Create New Account
+        </button>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
